2003-08-10  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descritpions/plustek.desc: Update to new keywords,
	  added Genius Colorpage HR6X EPP
	* TODO: moved Plustek topics to done section

2003-08-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Plustek OpticSlim 1200.
	  Updated Mustek Paragon 600 II ED/EP information.

2003-07-31  Peter Kirchgessner <peter@kirchgessner.net>

	* doc/descriptions/hp.desc: Add status by model

2003-07-31  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: All the unsupported entries
	  that pointed to .txt files have links to HTML pages now.

2003-07-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Minolta and Visioneer
	  scanners. Updated Avision, Medion, and UMAX scanners.
	* tools/check-usb-chip.c: Added test for Genesys Logig GL660 +
	  GL646 combination. Added some more messages about what's going
	  on.
	* TODO: Added frontend linking issue and color management
	  discussion. Removed sanei_jpeg move and avision patch entries.
	  Updated global init issue and desc file entry.
	* po/sane-backends.bg.po: Updated Bulgarian translation (from
	  Pavel Constantinov <pavelconstantinov@bigfoot.com>).

2003-07-29  Matthew Duggan <stauff1@users.sourceforge.net>

	* backend/canon_pp.c: Reset globals in sane_exit.

2003-07-28  Andras Major <andras@users.sourceforge.net>

	* doc/descriptions/coolscan2.desc: changed IEEE1394
	  to IEEE-1394 and changed to new status keyword scheme.

2003-07-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/Makefile.in po/sane-backends.bg.po: Added Bulgarian
	  translation (from Pavel Constantinov 
	  <pavelconstantinov@bigfoot.com>).

2003-07-28  Thomas Soumarmon <thomas.soumarmon@cogitae.net>
	* doc/descriptions/hp5400.desc : changed status to basic

2003-07-28  Thomas Soumarmon <thomas.soumarmon@cogitae.net>